kubernetes-network-segmentation/backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  namespace: network-segmentation
  labels:
    app: backend
    tier: database
spec:
  containers:
    - name: backend
      image: postgres:17-alpine
      ports:
        - containerPort: 5432
      resources:
        requests:
          memory: "128Mi"
          cpu: "100m"
        limits:
          memory: "256Mi"
          cpu: "200m"
