kubernetes-network-segmentation/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-db
  namespace: network-segmentation
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
