kubernetes-network-segmentation/external-web.yaml
apiVersion: v1
kind: Pod
metadata:
  name: external-web
  namespace: external-segmentation
  labels:
    app: external-web
spec:
  containers:
    - name: nginx
      image: nginx:alpine
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: external-web
  namespace: external-segmentation
spec:
  selector:
    app: external-web
  ports:
    - name: http
      port: 80
      targetPort: 80
