kubernetes-network-segmentation/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-web
  namespace: network-segmentation
spec:
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
