kubernetes-network-segmentation/allow-trusted-namespace-to-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-trusted-namespace-to-backend
  namespace: network-segmentation
spec:
  podSelector:
    matchLabels:
      app: backend

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              access-zone: trusted

      ports:
        - protocol: TCP
          port: 5432
