kubernetes-network-segmentation/deny-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-backend-ingress
  namespace: network-segmentation
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
